# ctbot-misc

./: .gitignore  gcc optimization for arm.md
atomic-test/: .cproject  .project  CMakeLists.txt  main.cpp  rpi.cmake  test.cpp  test.h
camera/track/: .cproject  .project  CMakeLists.txt  rpi.cmake  run_cmake_rpi.sh
camera/track/src/: trackcolour.cpp
camera/track2/: .cproject  .project  CMakeLists.txt  rpi.cmake
camera/track2/lib/: client_server.h  client_server_base.h  tcp_client_server.h  tcp_server.h  utils.h
camera/track2/src/: contours.cpp
camera/vision/: CMakeLists.txt  rpi.cmake
camera/vision/src/: vision.cpp
docs/: opencv_build.txt  qtbase.patch
hello_font/: Makefile  Makefile.include
measurements/: angle_log.txt  angle_log.xlsx  angle_log2.xlsx  angle_log3.xlsx  slog.xlsx  slog_goto_pos.xlsx  slog_speedctrl.xlsx
scripts/: bot_reset.sh  bot_reset_off.sh  bot_reset_on.sh  bot_setup.sh  flash.sh  flash_ee.sh  socat.sh
serial_test/: .cproject  .project  CMakeLists.txt  README.md  crc_engine.h  ll_command.cpp  ll_command.h  serial_protocol.cpp  serial_protocol.h  serial_protocol_clock.h  test_serial_protocol.cpp
serial_test/cmake/: linux.cmake  mac.cmake  rpi2.cmake  rpi3.cmake  run_linux.sh  run_mac.sh  run_rpi2.sh  run_rpi3.sh  targets.cmake
serial_test/contrib/include/: client_server_base.h  logging.h  serial_connection.h  spi_endpoint.h  utils.h
spi-test/: spidev_test.c  test.sh
spi-test/perf-analysis/: spi_buf.s  spi_buf_2.s  spi_os.s
teensy/i2c-test/: .gitignore  platformio.ini
teensy/i2c-test/lib/PCF8574/: I2CIO.cpp  I2CIO.h
teensy/i2c-test/lib/lcd/: LCD.cpp  LCD.h  LiquidCrystal_I2C.cpp  LiquidCrystal_I2C.h
teensy/i2c-test/src/: main.cpp
